Finalizando projeto - inserindo minha imagem

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div id="container">
       <div id="profile">
         <img
-          src="assets/avatar.png"
+          src="assets/avatar-light.png"
           alt="foto do usuario do perfil"
         />
         <p>@patines_luis</p>
@@ -27,7 +27,7 @@
       </div>
       <ul>
         <li>
-          <a href="#" target="_blank">Portifólio</a>
+          <a href="https://patinesluis.github.io/Portfolio/" target="_blank">Portifólio</a>
         </li>
         <li>
           <a href="https://www.instagram.com" target="_blank">Instagram</a>
